--- a/vars/WS-C2960S-24TS-L.yml
+++ b/vars/WS-C2960S-24TS-L.yml
@@ -1,5 +1,5 @@
 ---
-ios_version: 15.2(2)E9
-ios_file: c2960s-universalk9-mz.152-2.E9.bin
-ios_md5: ea604d030b378b6c5c3dda3d501ac2f5
+ios_version: 15.XXXX
+ios_file: c2960s-universalk9XXXXX.bin
+ios_md5: ea604d030b378b6c5c3xxxxxxxxxxx
 ios_size: 20000
