--- a/vars/WS-C2960S-24TS-S.yml
+++ b/vars/WS-C2960S-24TS-S.yml
@@ -1,5 +1,5 @@
 ---
-ios_version: 15.XXXX
-ios_file: c2960s-universalk9XXXXX.bin
+ios_version: 1X.XXXX
+ios_file: cXXX0s-universalk9XXXXX.bin
 ios_md5: ea604d030b378b6c5c3xxxxxxxxxxx
-ios_size: 20000
+ios_size: XXX00
