--- a/inventory.yml
+++ b/inventory.yml
@@ -12,7 +12,7 @@ all:
       vars:
         ansible_connection: network_cli
         ansible_network_os: ios
-        ansible_user: XXXXXX 
+        ansible_user: XXXXXXX 
         ansible_password: XXXXXX   
 
 # Production SW
